resume.css
.tk-adobe-garamond-pro {
  font-family: "adobe-garamond-pro", sans-serif;
}

.tk-brandon-grotesque {
  font-family: "brandon-grotesque", sans-serif;
}
@font-face {
  font-family: adobe-garamond-pro;
  src: url(https://use.typekit.net/af/279ae3/0000000000000000000130e3/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff2"), url(https://use.typekit.net/af/279ae3/0000000000000000000130e3/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("woff"), url(https://use.typekit.net/af/279ae3/0000000000000000000130e3/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3) format("opentype");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: adobe-garamond-pro;
  src: url(https://use.typekit.net/af/e4771c/0000000000000000000130e5/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff2"),
    url(https://use.typekit.net/af/e4771c/0000000000000000000130e5/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff"),
    url(https://use.typekit.net/af/e4771c/0000000000000000000130e5/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("opentype");
  font-weight: 400;
  font-style: italic;
}

@font-face {
  font-family: adobe-garamond-pro;
  src: url(https://use.typekit.net/af/f430af/0000000000000000000130e6/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff2"), url(https://use.typekit.net/af/f430af/0000000000000000000130e6/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff"), url(https://use.typekit.net/af/f430af/0000000000000000000130e6/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: brandon-grotesque;
  src: url(https://use.typekit.net/af/1da05b/0000000000000000000132df/27/l?subset_id=2&fvd=n4&v=3) format("woff2"),
    url(https://use.typekit.net/af/1da05b/0000000000000000000132df/27/d?subset_id=2&fvd=n4&v=3) format("woff"),
    url(https://use.typekit.net/af/1da05b/0000000000000000000132df/27/a?subset_id=2&fvd=n4&v=3) format("opentype");
  font-weight: 400;
  font-style: normal;
}

html {
  height: 100%;
}

body {
	font-family: garamond, adobe-garamond-pro, serif;
  font-size: 24px;

  background-color: hsl(34, 30%, 94%);
  color: hsl(230, 8%, 25%);

  height: 100%;
  margin: 0;
  padding-top: 1em;
	display: flex;
	flex-direction: column;
	align-items: center;
}

body.print {
  max-width: 80%;
  margin-left: auto;
  margin-right: auto;
}

#content-root {
  padding-bottom: 4em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-top: 1em;
}

.title {
  font-family: brandon-grotesque, 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 2em;
  text-transform: uppercase;
  margin-left: -2px;
}

.sprig {
  max-width: 640px;
  margin-top: 0.8em;
  padding-right: 1em;
  margin-top: 0;
}

.print .sprig {
  max-width: 100%;
}

ul.sprig {
  list-style-type: none;
  padding-left: 0;
  padding-right: 0;
}

.sprig li {
  margin-bottom: 0.5em;
}

.sprig {
  display: none;
}

.project-title, .education-title {
  font-family: brandon-grotesque, 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 1.1em;
  list-style-type: none;
  text-transform: uppercase;
  margin-left: -2px;
}

.tldr {
  display: none;
}

.show-0 .level-0 {
  display: block;
}

.show-1 .level-1 {
  display: block;
}

.show-2 .level-2 {
  display: block;
}

.show-3 .level-3 {
  display: block;
}

.show-4 .level-4 {
  display: block;
}

.show-5 .level-5 {
  display: block;
}

.level-1 {
  margin-left: 0;
  margin-bottom: 0.5em;
}

.level-2 {
  margin-top: 0.5em;
}

.sprig .title {
  font-size: 1.5em;
}

.heading {
  text-align: center;
}

.hidden {
  display: none;
}

a:link {
  color: hsl(230, 20%, 37%);
  text-decoration: none;
  border-bottom: hsla(230, 38%, 37%, 0.5) dashed 1px;
}

a:visited {
  color: hsl(0, 0%, 32%);
  font-weight: normal;
}

/*
Counterintuitive, but this will work:
Putting #controls-container in the
URL will hide the controls-container.
*/
#controls-container:target {
  display: none;
}

#controls-container {
  position: fixed;
  top: 0;
  right: 0;
  border: solid 1px #888;
  background-color: black;
  color: wheat;
  width: 100%;
  font-family: brandon-grotesque, 'Helvetica Neue', Helvetica, sans-serif;
  text-transform: uppercase;
  font-size: 28px;
  display: flex;
}

.controls {
  display: flex;
  margin-left: 0.5em;
  flex-grow: 1;
}

.instructions {
  font-style: italic;
  font-weight: bold;
}

a.thumbnail-link {
  border-bottom: none;
}

.thumbnail-container {
  display: flex;
  justify-content: center;
}

#tldr-slider {
  background: none;
  margin: 0.5em;
}

/* Need this for the bar to show up on Firefox. */
#tldr-slider::-moz-range-track {
  background: hsl(34, 30%, 94%);
  border: none;
}

a.pdf-link {
  color: wheat;
  margin-right: 0.5em;
}

.date {
  font-style: italic;
}

@media (max-width: 568px) {
  body {
    font-size: 18px;
  }
}

